--- a/cmd/job/job-example.toml
+++ b/cmd/job/job-example.toml
@@ -9,7 +9,7 @@
 [kafka]
     topic = "goim-push-topic"
     group = "goim-push-group-job"
-    brokers = ["10.0.41.145:9092"]
+    brokers = ["10.0.41.145:9093","10.0.41.145:9094","10.0.41.145:9095"]
 
 [redis]
     network = "tcp"
