--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -220,7 +220,7 @@ services:
     networks:
       - laradock_backend
 
-  #####goim-demo##### 
+  #####goim-example##### 
   comet:
     build:
       context: .
@@ -253,8 +253,8 @@ services:
       - kafka2
       - kafka3
     entrypoint:         # 容器启动时强制执行 comet命令  (等同于 docker run --entrypoint 的作用)
-      - /webser/go_wepapp/goim-demo/comet
-      - -conf=/webser/go_wepapp/goim-demo/comet.toml
+      - /webser/go_wepapp/goim-example/comet
+      - -conf=/webser/go_wepapp/goim-example/comet.toml
       - -region=sh 
       - -zone=sh001 
       - -deploy.env=prod 
@@ -263,7 +263,7 @@ services:
       - -weight=10
       - -offline=true
       - -debug=true
-      - -log_dir=/webser/go_wepapp/goim-demo
+      - -log_dir=/webser/go_wepapp/goim-example
       - -v=1
       - -alsologtostderr
     networks:
@@ -295,14 +295,14 @@ services:
       - kafka2
       - kafka3
     entrypoint:
-      - /webser/go_wepapp/goim-demo/logic
-      - -conf=/webser/go_wepapp/goim-demo/logic.toml
+      - /webser/go_wepapp/goim-example/logic
+      - -conf=/webser/go_wepapp/goim-example/logic.toml
       - -region=sh 
       - -zone=sh001 
       - -deploy.env=prod 
       - -host=10.0.41.145
       - -weight=10
-      - -log_dir=/webser/go_wepapp/goim-demo
+      - -log_dir=/webser/go_wepapp/goim-example
       - -v=1
       - -alsologtostderr
     networks:
@@ -332,13 +332,13 @@ services:
       - kafka2
       - kafka3
     entrypoint:
-      - /webser/go_wepapp/goim-demo/job
-      - -conf=/webser/go_wepapp/goim-demo/job.toml
+      - /webser/go_wepapp/goim-example/job
+      - -conf=/webser/go_wepapp/goim-example/job.toml
       - -region=sh 
       - -zone=sh001 
       - -deploy.env=prod 
       - -host=10.0.41.145
-      - -log_dir=/webser/go_wepapp/goim-demo
+      - -log_dir=/webser/go_wepapp/goim-example
       - -v=1 
       - -alsologtostderr
     networks:
